FIXED: CheckboxInput Tick off not removed completely on Firefox 78.0.2 (64-Bit)/Windows

--- a/src/components/CheckboxInput/CheckboxInput.module.scss
+++ b/src/components/CheckboxInput/CheckboxInput.module.scss
@@ -58,7 +58,7 @@ $highlight: $bitcoinYellow;
         stroke-linecap: round;
         stroke-linejoin: round;
         stroke-dasharray: 16px;
-        stroke-dashoffset: 16px;
+        stroke-dashoffset: 17px;
         transition: all 0.3s ease;
         transition-delay: 0.1s;
         transform: translate3d(0, 0, 0);
@@ -101,7 +101,7 @@ $highlight: $bitcoinYellow;
       &:first-child {
         border-color: $primary;
         // background: $primary;
-        animation: check 0.6s ease;
+        // animation: check 0.6s ease;
 
         svg {
           stroke-dashoffset: 0;
